kubernetes/nginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: django-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service  # 연결할 Service 이름
                port:
                  number: 80         # Service의 port 번호

# tunnel을 실행해야 접속이 된다!!
# minikube tunnel
